<resources>
    <string name="app_name">MapCardViewDemo</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_Taxi">Taxi</string>
    <string name="title_cart">Cart</string>
    <string name="title_about">About</string>



    <string name="credit_next">下次再說</string>
    <string name="credit_binding_card_title">信用卡綁定</string>
    <string name="do_not_hint">以後不再提醒</string>
    <string name="credit_bind_content">台灣大車隊55688 App 目前已提供信用卡綁定功能。透過信用卡綁定，搭乘台灣大車隊不必帶現金。在您抵達目的地時，只要透過 App 中綁定的信用卡就能輕鬆支付車資。</string>
    <string name="credit_bind">立即綁定</string>


    <string name="confirm">確定</string>

    <string name="notification_title">通知</string>
    <string name="close">關閉</string>
    <string name="cancel">取消</string>
</resources>
